--- a/indexz.html
+++ b/indexz.html
@@ -7,7 +7,16 @@
   <title>Zuri task</title>
 </head>
 <body>
-    <script src="./zuri.js"></script>
+    <script>
+  let myLastName = "OYAROMADE";
+let myFirstName = "HAMMED";
+let myHeight = "2.45fts";
+let myCountry = "NIGERIA";
+
+console.log("Name:"+" "+ myLastName +" "+ myFirstName);
+console.log("Height:"+" "+ myHeight);
+console.log("Country:"+" "+ myCountry);
+  </script>
   <h1>My Zuri task</h1>
 </body>
 </html>
