--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
 
 <body>
     <script>
-            let myLastName = "OYAROMADE";
-            let myFirstName = "HAMMED";
-            let myHeight = "2.45fts";
-            let myCountry = "NIGERIA";
-
-            console.log("Name:" + " " + myLastName + " " + myFirstName);
-            console.log("Height:" + " " + myHeight);
-            console.log("Country:" + " " + myCountry);
+       alert("NAME: OYAROMADE HAMMED OLALEKAN"+"   "+
+      "HEIGHT: 2.54fts" +"  "+ "COUNTRY: NIGERIA");
     </script>
     <h1>My Zuri task</h1>
 </body>
