--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <script>
-       alert("NAME: OYAROMADE HAMMED OLALEKAN"+"   "+
-      "HEIGHT: 2.54fts" +"  "+ "COUNTRY: NIGERIA");
-    </script>
+    <script src="./zuri.js"></script>
     <h1>My Zuri task</h1>
 </body>
 </html>
